--- a/Index.css
+++ b/Index.css
@@ -668,8 +668,8 @@ a{
 }
 
 .solDesc:hover{
-  background-color: #FBFFB1;
-  color: #FFACAC;
+  background-color: #1868AE;
+  color: #C6D7EB;
 }
 
 /* ================================================ */
@@ -707,8 +707,8 @@ a{
 }
 
 .lifeclassDesc:hover{
-  background-color: #F7C5CC;
-  color: #CC313D;
+  background-color: #FBFFB1;
+  color: #FFACAC;
 }
 
 /* ================================================ */
