--- a/Index.css
+++ b/Index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
   margin: 0;
@@ -948,6 +949,9 @@ a{
   right: 0;
 }
 
+
+
+
 /* ================================================ */
 
 .announcement{
@@ -963,10 +967,114 @@ a{
   font-size: 1.7vw;
 }
 
+/* ================================================ */
+
+.bottomLinks{
+  display: flex;
+  background-color: black;
+  color: white;
+  border-bottom: 5px yellow solid;
+}
+
+.firstGrid{
+  text-align: center;
+  border-right: white 1px solid;
+  padding: 2%;
+  width: 20%;
+}
+
+.firstGrid img{
+  width: 70%;
+}
+
+.firstGrid h1{
+  margin-top: 5%;
+  text-align: center;
+}
+
+.firstGrid a{
+  margin-top: 7%;
+  font-size: 3.5vw;
+  font-family: 'Source Code Pro';
+}
+
+.firstGrid p{
+  margin-top: 10%;
+  font-size: 1vw;
+  text-align: left;
+  color: grey;
+  font-family: 'Source Code Pro';
+}
+
+/* =================================================== */
 
 
+.secondGrid{
+  width: 20%;
+  display: inline-block;
+  margin-left: 3%;
+  margin-top: 4%;
+}
 
+.secondGrid p{
+  font-family: 'Source Code Pro';
+  font-size: 1.2vw;
+}
 
+.botli{
+  margin-top: 40%;
+}
+
+.botli p{
+  margin-bottom: 2%;
+}
+
+.botli a{
+  font-family: 'Source Code Pro';
+  font-size: 1.2vw;
+  color: gray;
+}
+
+.botli a:hover{
+  color: white;
+  transition: 0.5s;
+}
+
+/* =================================================== */
+
+.thirdGrid{
+  width: 20%;
+  display: inline-block;
+  margin-top: 4%;
+}
+
+.thirdGrid p{
+  font-family: 'Source Code Pro';
+  font-size: 1.2vw;
+}
+
+.botli{
+  margin-top: 40%;
+}
+
+.botli p{
+  margin-bottom: 2%;
+}
+
+.botli a{
+  font-family: 'Source Code Pro';
+  font-size: 1.2vw;
+  color: gray;
+}
+
+.botli a:hover{
+  color: white;
+  transition: 0.5s;
+}
+
+.mobileLinks{
+  display: none;
+}
 
 /* ================================================ */
 
@@ -1558,8 +1666,8 @@ a{
 
   .pandA{
     display: block;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 5%;
     justify-content: center;
   }
@@ -1621,6 +1729,94 @@ a{
     opacity: 1;
     right: 0;
   }
+
+  .brrr{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2%;
+  }
+  
+  .brrr a{
+    color: white;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    border-radius: 5px;
+    font-family: 'AudioWide';
+    font-size: 2.5vw;
+    background-color: black;
+  }
+  
+  .prayerReq{
+    text-align: left;
+    padding-bottom: 5%;
+  }
+  
+  .prayerReq span{
+    text-align: right;
+  }
+  
+  .prayerReq h1{
+    font-family: 'AudioWide';
+    font-size: 6vw;
+  }
+  
+  .prayerReq p{
+    font-size: 4vw;
+    text-align: justify;
+  }
+  
+  .scroll{
+    margin-left: 0;
+    margin-right: 0%;
+    border: 1px black solid;
+    padding: 4%;
+    border-radius: 10px;
+    height: 600px;
+    margin-bottom: 5%;
+    overflow: scroll;
+    overflow-x: hidden;
+    background-color: #ECF9FF;
+  }
+
+  .request{
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-bottom: 4%;
+    background-color: #F7F7F7;
+  }
+  
+  .heading{
+    background-color: #F5F5F5;
+    padding-left: 3%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    color: black;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+  
+  .heading h1{
+    font-size: 4vw;
+    font-family: 'Encode Sans SC';
+  }
+  
+  .body{
+    color: black;
+    padding-left: 3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 3%;
+    background-color: FFE7CC;
+  }
+  
+  .body p{
+    font-size: 3vw;
+    text-align: justify;
+    padding-bottom: 1%;
+  }
+  
   
   /* ================================================ */
   
@@ -1636,6 +1832,51 @@ a{
   
   .announcement p{
     font-size: 4vw;
+  }
+
+  /* ================================================ */
+
+  .bottomLinks{
+    display: none;
+  }
+  
+  /* ================================================ */
+
+  .mobileLinks{
+    display: block;
+    background-color: black;
+  }
+
+  .mobileLinks .firstGrid{
+    text-align: center;
+    border-right: white 1px solid;
+    padding: 2%;
+    width: 100%;
+    border-bottom: white 1px solid;
+  }
+  
+  .mobileLinks .firstGrid img{
+    width: 20%;
+    margin-top: 2%;
+  }
+  
+  .mobileLinks .firstGrid h1{
+    margin-top: 1%;
+    text-align: center;
+  }
+  
+  .mobileLinks .firstGrid a{
+    margin-top: 1%;
+    font-size: 6vw;
+    font-family: 'Source Code Pro';
+  }
+  
+  .mobileLinks .firstGrid p{
+    margin: 2%;
+    font-size: 2vw;
+    text-align: center;
+    color: grey;
+    font-family: 'Source Code Pro';
   }
 
 }
