--- a/Media.css
+++ b/Media.css
@@ -5,31 +5,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Quicksand';
+    font-family: 'Source Code Pro';
     scroll-behavior: smooth;
 }
 
 .banner{
     width: 100%;
-    background-image: linear-gradient(rgba(138, 170, 229, 0.7),rgba(138, 170, 229, 0.7)), url(MediaIMGs/banner.jpg);
+    background-image: linear-gradient(rgba(138, 170, 229, 0.8),rgba(138, 170, 229, 0.8)), url(MediaIMGs/banner.jpg);
     background-size: cover;
     background-position: center;
     color: white;
     padding-bottom: 5%;
 }
 
-.banner h1{
-    text-align: center;
-    font-size: 7vw;
-    font-family: 'Sono';
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
-
 .banner p{
+    margin-top: 5%;
+    margin-right: 45%;
+    margin-left: 45%;
     text-align: center;
     font-size: 2vw;
-    font-family: 'Sono';
+    background-color: white;
+    color: #8aaae5;
+}
+
+.banner h1{
+    text-align: center;
+    font-size: 6vw;
+    padding-bottom: 5%;
+
 }
 
 .home img{
@@ -51,6 +54,18 @@
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%;
+}
+
+.gallery .text{
+    font-size: 2vw;
+    border-left: #8aaae5 15px solid;
+    padding-left: 1%;
+}
+
+.gallery .text:hover{
+    border-color: #00008B;
+    transition: 0.5s;
+    cursor: pointer;
 }
 
 /* =============================================================== */
@@ -79,7 +94,7 @@
     width: 50%;
     margin-top: 3%;
     margin-bottom: 3%;
-    background-image: url(Gallery/Encounter\ Retreat/er1.jpg);
+    background-image: url(Gallery/Life\ Class\ Retreat/lc1.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -125,7 +140,7 @@
     margin-top: 1%;
     margin-right: 2%;
     margin-bottom: 3%;
-    background-image: url(MediaIMGs/TwoofUs/1.jpg);
+    background-image: url(Gallery/Youth\ Leadership\ Camp/yc1.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -136,7 +151,7 @@
     width: 50%;
     margin-top: 1%;
     margin-bottom: 3%;
-    background-image: url(Gallery/Youth\ Leadership\ Camp/yc1.jpg);
+    background-image: url(Gallery/Encounter\ Retreat/er1.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -147,13 +162,15 @@
 
 
 @media (max-width: 500px) {
-    .banner{
-        
+    .banner p{
+        font-size: 3vw;
     }
+
+
     
     .banner h1{
         text-align: center;
-        font-size: 10vw;
+        font-size: 12vw;
         font-family: 'Sono';   
         margin-left: 5%;
         margin-right: 5%;
@@ -173,4 +190,67 @@
         border-radius: 10px;
         position: absolute;
     }
+    .gallery{
+        display: block;
+        margin-left: 4%;
+        margin-right: 4%;
+        margin-top: 5%;
+    }
+
+    /* ======================================================= */
+
+    .text h1{
+        font-size: 6vw;
+    }
+
+    .row1{
+        display: block;
+    }
+
+    .row2{
+        display: block;
+    }
+
+    /* ======================================================= */
+
+    .news{
+        width: 100%;
+    }
+
+    .news1{
+        width: 100%;
+    }
+
+    .row2 .news{
+        width: 100%;
+    }
+
+    .row2 .news1{
+        width: 100%;
+    }
+
+    .newsInfo{
+        padding-top: 20%;
+        padding-bottom: 20%;
+        border-radius: 10px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #FBEAEB;
+        transition: 0.3s;
+    }
+    
+    .newsInfo:hover{
+        background-color: transparent;
+        color: transparent;
+    }
+    
+    .newsInfo h1{
+        text-align: center;
+        font-size: 5vw;
+    }
+    
+    .newsInfo p{
+        text-align: center;
+        font-size: 3vw;
+    }
+
 }
