--- a/lightbox.css
+++ b/lightbox.css
@@ -139,7 +139,7 @@ body.lb-disable-scrolling {
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
-  *zoom: 1;
+  zoom: 1;
   width: 100%;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -202,3 +202,20 @@ body.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
+
+@media (max-width: 500px){
+
+
+  .lightbox .lb-image {
+    display: block;
+    height: none;
+    max-width: inherit;
+    max-height: none;
+    border-radius: 3px;
+    margin-top: 50%;
+
+    /* Image border */
+    border: 4px solid white;
+  }
+  
+} 
