--- a/Mentoring.css
+++ b/Mentoring.css
@@ -1,63 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Pathway Extreme';
     scroll-behavior: smooth;
 }
 
 .bgweb{
+    width: 100%;
+    background-image: linear-gradient(rgba(25, 24, 37, 0.9),rgba(25, 24, 37, 0.9)), url(MentoringIMGs/mentor.jpg);
     background-size: cover;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.7)), url(MentoringIMGs/mentor.jpg);
+    color: white;
+    background-position: center;
     padding-bottom: 5%;
-    background-attachment: fixed;
 }
 
 a{
     text-decoration: none;
-    color: black;
 }
 
-.topbar{
-    padding-left: 5%;
-    width: 100%;
-}
-
-.topbar h1{
-    padding-top: 40px;
-    font-size: 2.5vw;
-    color: white;
-}
-
-.webName{
-    padding-top: 5%;
-    padding-bottom: 5%;
-    text-align: center;
-}
-
-.webName p{
-    font-size: 1.5vw;
-    text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
-    color: whitesmoke;
-}
-
-.topbar img{
-    width: 100px;
-    cursor: pointer;
+.imageHolder img{
+    width: 7%;
     margin-top: 2%;
+    margin-left: 2%;
 }
 
-.webName h1{
-    font-size: 10vw;
-    color: white;
+.plateName h2{
+    margin-top: 1%;
+    text-align: center;
+    color: #191825;
+    background-color: #FFA3FD;
+    margin-left: 45%;
+    margin-right: 45%;
+    font-size: 2vw;
 }
 
-.webName h2{
-    font-size: 1.3vw;
-    color: white;
+.intro h1{
+    text-align: center;
+    font-family: 'Pathway Extreme';
+    font-size: 9vw;
 }
+
+.intro p{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5vw;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+/* =========================================================== */
 
 .container1{
     display: flex;
@@ -93,16 +90,17 @@ a{
     font-size: 1.5vw;
 }
 
+/* =========================================================== */
+
 .container2{
     display: flex;
     align-items: center;
     margin-left: 10%;
     margin-right: 10%;
-    color: white;
+    color: black;
 }
 
 #bgcolor{
-    background-color: rgb(117, 116, 116);
     padding-top: 10%;
     padding-bottom: 10%;
 }
@@ -138,135 +136,329 @@ a{
     border-radius: 50%;
 }
 
-.subscribe{
-    display: block;
-    text-align: center;
-    background-image: linear-gradient(rgba(59, 58, 58, 0.4),rgba(59, 58, 58, 0.4)), url(MentoringIMGs/bgcolor.png);
-    background-attachment: fixed;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    color: white;
-}
 
-.subscribe h1{
-    font-size: 4vw;
-}
 
-.subscribe p{
-    font-size: 1.5vw;
-}
-
-.subscribe button{
-    border: 2px solid #B1B2FF;
-    border-radius: 5px;
-    background: none;
-    margin: 10px 0 10px 0;
-    padding-top: 0.9%;
-    padding-bottom: 0.9%;
-    padding-left: 2%;
-    padding-right: 2%;
-    cursor: pointer;
-    transition: transform .2s;
-    color: white;
-    font-size: 1.5vw;
-}
-
-.subscribe button:hover{
-    transform: scale(1.1);
-}
-
-.announce1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    margin-right: 15%;
-    margin-left: 15%;
-}
-
-.announcement{
-   margin-right: 80px;
-   align-items: center;
-}
+@media (max-width: 500px) {
+    .bgweb{
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        padding-bottom: 10%;
+    }
     
-.announcement h1{
-    font-size: 3.5vw;
-    text-align: right;
+    .imageHolder img{
+        width: 15%;
+        margin-top: 5%;
+        margin-left: 5%;
+    }
+    
+    .plateName h2{
+        margin-top: 1%;
+        text-align: center;
+        margin-left: 35%;
+        margin-right: 35%;
+        font-size: 4vw;
+    }
+    
+    .intro h1{
+        text-align: center;
+        font-size: 11vw;
+    }
+    
+    .intro p{
+        text-align: center;
+        font-size: 4vw;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
+    #verse{
+        text-align: center;
+        font-size: 3.5vw;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
+    /* =========================================================== */
+
+    .container1{
+        display: block;
+        justify-content: center;
+        margin-top: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 10%;
+    }
+
+    .container1 .subContainer1{
+        flex: 1;
+        margin-right: 2%;
+    }
+
+    .subContainer1 img{
+        width: 100%;
+        max-width: 500px;
+        border: 2px gray black;
+        border-radius: 50%;
+    }
+
+    .subContainer2{
+        flex: 1;
+        margin-left: 2;
+    }
+
+    .subContainer2 h1{
+        margin-top: 3%;
+        font-size: 5vw;
+    }
+
+    .subContainer2 p{
+        margin-top: 3%;
+        padding-left: 1%;
+        font-size: 3vw;
+        border-left: 5px #191825 solid;
+    }
+
+     /* =========================================================== */
+
+    .container2{
+        flex-direction: column-reverse;
+        margin-left: 5%;
+        margin-right: 5%;
+        color: black;
+    }
+    
+    #bgcolor{
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+    
+    .container2 .subContainer3{
+        flex: 1;
+        margin-right: 2%;
+    }
+    
+    .subContainer3 h1{
+        margin-top: 3%;
+        font-size: 5vw;
+        text-align: left;
+    }
+    
+    .subContainer3 p{
+        text-align: left;
+        margin-top: 3%;
+        padding-left: 1%;
+        font-size: 3vw;
+        border-left: 5px #191825 solid;
+    }
+    
+    .container2 .subContainer4{
+        flex: 1;
+        margin-left: 2%;
+    }
+    
+    .subContainer4 img{
+        width: 100%;
+        max-width: 500px;
+        border: 2px gray black;
+        border-radius: 50%;
+    }
 }
 
-.announcement p{
-    font-size: 2vw;
-    text-align: right;
-}
+ /* =========================================================== */
 
-.announcement .btn{
-    display: flex;
-    justify-content: end;
+.bottomLinks{
+    display: none;
 }
+  
+ /* =========================================================== */
 
-.announcement button{
-    border: 2px solid #B1B2FF;
-    border-radius: 5px;
-    background: none;
-    margin: 10px 0 10px 0;
-    padding: 15px;  
-    cursor: pointer;
-    transition: transform .2s;
-}
-
-.announcement button:hover{
-    transform: scale(1.1);
-}
-
-.announceImg img{
-    width: 100%;
-    border-radius: 50%;
-}
-
-.bgbackground{
-    background-color:  #5d7288;
-}
 
 .bottomLinks{
     display: flex;
-    justify-content: center;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    background-color: #2c3e50;
+    margin-top: 5%;
+    background-color: #ffacac;
     color: white;
+    border-bottom: 5px #FBFFB1  solid;
 }
-
-.demnSon{
-    margin-right: 2%;
+  
+.bottomLinks .firstGrid{
+    text-align: center;
+    border-right: white 1px solid;
+    padding: 2%;
+    width: 20%;
+}
+  
+.bottomLinks .firstGrid img{
+    width: 70%;
+}
+  
+.bottomLinks .firstGrid h1{
+    margin-top: 5%;
     text-align: center;
 }
-
-.demnSon h1{
+  
+.bottomLinks .firstGrid a{
+    margin-top: 7%;
+    color: white;
     font-size: 3.5vw;
+    font-family: 'Source Code Pro';
 }
-
-.demnSon a{
-    text-decoration: none;
+  
+.bottomLinks .firstGrid p{
+    margin-top: 10%;
+    font-size: 1vw;
+    text-align: left;
+    color: white;
+    font-family: 'Source Code Pro';
+}
+  
+ /* =========================================================== */
+  
+.bottomLinks .secondGrid{
+    width: 20%;
+    display: inline-block;
+    margin-left: 3%;
+    margin-top: 4%;
+}
+  
+.bottomLinks .secondGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+}
+  
+.bottomLinks .botli{
+    margin-top: 40%;
+}
+  
+.bottomLinks .botli p{
+    margin-bottom: 2%;
+}
+  
+.bottomLinks .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
     color: white;
 }
-
-.demnSon a:hover{
-    color: #B1B2FF;
+  
+.bottomLinks .botli a:hover{
+    color: white;
+    transition: 0.5s;
+}
+  
+  /* =================================================== */
+  
+.bottomLinks .thirdGrid{
+    width: 20%;
+    display: inline-block;
+    margin-top: 4%;
+}
+  
+.bottomLinks .thirdGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+}
+  
+.bottomLinks .botli{
+    margin-top: 40%;
+}
+  
+.bottomLinks .botli p{
+    margin-bottom: 2%;
+}
+  
+.bottomLinks .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: white;
+}
+  
+.bottomLinks .botli a:hover{
+    color: #FBFFB1;
+    transition: 0.5s;
+}
+  
+.bottomLinks .mobileLinks{
+    display: none;
 }
 
-.demnSon h1:hover{
-    color: #B1B2FF;
-    cursor: pointer;
+@media (max-width: 500px) {
+    .bottomLinks{
+       display: none;
+    }
+      
+    /* ================================================ */
+    
+    .mobileLinks{
+        margin: 0;
+        display: block;
+        background-color: #191825;
+        color: white;
+        border-bottom: 5px #FFA3FD  solid;
+        overflow-y: hidden;
+    }
+    
+    .mobileLinks .firstGrid{
+        text-align: left;
+        border-right: white 0px solid;
+        width: 80%;
+        padding: 2%;
+        padding-left: 10%;
+        padding-right: 10%;
+        border-bottom: white 1px solid;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+      
+    .mobileLinks .firstGrid img{
+        width: 25%;
+        margin-top: 2%;
+    }
+      
+      .mobileLinks .firstGrid h1{
+        margin-top: 2%;
+        text-align: left;
+    }
+      
+    .mobileLinks .firstGrid a{
+        margin-top: 1%;
+        font-size: 7vw;
+        color: white;
+        font-family: 'Source Code Pro';
+    }
+      
+    .mobileLinks .firstGrid p{
+        font-size: 3vw;
+        color: #FFA3FD;
+        font-family: 'Source Code Pro';
+        margin-top: 10%;
+    }
+    
+    .mobileLinks .secondLane{
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        width: 100%;
+        color: white;
+        margin-top: 5%;
+    }
+      
+    .mobileLinks .noice{
+        margin-bottom: 5%;
+        font-family: 'Source Code Pro';
+        font-size: 4vw;
+        color: white;
+    }
+    
+    .mobileLinks .links{
+        margin-top: 5%;
+        font-size: 4vw;
+        
+    }
+    
+    .mobileLinks .links a{
+        color: #FFA3FD;
+        font-family: 'Source Code Pro';
+    }
 }
 
-.demnSon p:hover{
-    color: #B1B2FF;
-    cursor: pointer;
-}
-
-.demnSon p{
-    font-size: 1.3vw;
-}
