--- a/gallery1.css
+++ b/gallery1.css
@@ -8,6 +8,11 @@
     scroll-behavior: smooth;
 }
 
+.wholePage{
+    display: block;
+    
+}
+
 .container{
     width: 100%;
     min-height: 100vh;
