--- a/Index.css
+++ b/Index.css
@@ -949,9 +949,6 @@ a{
   right: 0;
 }
 
-
-
-
 /* ================================================ */
 
 .announcement{
@@ -971,6 +968,7 @@ a{
 
 .bottomLinks{
   display: flex;
+  margin-top: 5%;
   background-color: black;
   color: white;
   border-bottom: 5px yellow solid;
@@ -1163,8 +1161,8 @@ a{
   }
   
   .pastors{
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 5%;
     display: block;
     align-items: center;
@@ -1174,7 +1172,7 @@ a{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 100%;
     border-radius: 50%;
   }
   
@@ -1186,12 +1184,13 @@ a{
   
   .pText h1{
     font-family: 'AudioWide';
-    font-size: 4vw;
+    font-size: 5vw;
     text-align: center;
   }
   
   .pText p{
-    font-size: 2.5vw;
+    margin-top: 2%;
+    font-size: 3.5vw;
     text-align: center;
   }
 
@@ -1538,8 +1537,8 @@ a{
   }
   
   .solDesc:hover{
-    background-color: #FBFFB1;
-    color: #FFACAC;
+    background-color: #1868AE;
+    color: #C6D7EB;
   }
 
   /* ================================================ */
@@ -1578,8 +1577,8 @@ a{
   }
   
   .lifeclassDesc:hover{
-    background-color: #F7C5CC;
-    color: #CC313D;
+    background-color: #FFACAC;
+    color: #FBFFB1;
   }
 
     /* ================================================ */
@@ -1596,7 +1595,7 @@ a{
   .mediaImg img{
     display: block;
     margin: auto;
-    width: 80%;
+    width: 100%;
     border-radius: 50%;
   }
   
@@ -1798,7 +1797,7 @@ a{
   }
   
   .heading h1{
-    font-size: 4vw;
+    font-size: 4.5vw;
     font-family: 'Encode Sans SC';
   }
   
@@ -1812,7 +1811,7 @@ a{
   }
   
   .body p{
-    font-size: 3vw;
+    font-size: 3.5vw;
     text-align: justify;
     padding-bottom: 1%;
   }
@@ -1848,35 +1847,60 @@ a{
   }
 
   .mobileLinks .firstGrid{
-    text-align: center;
-    border-right: white 1px solid;
+    text-align: left;
+    border-right: white 0px solid;
     padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
     width: 100%;
     border-bottom: white 1px solid;
+    padding-top: 10%;
+    padding-bottom: 10%;
   }
   
   .mobileLinks .firstGrid img{
-    width: 20%;
+    width: 30%;
     margin-top: 2%;
   }
   
   .mobileLinks .firstGrid h1{
     margin-top: 1%;
-    text-align: center;
+    text-align: left;
   }
   
   .mobileLinks .firstGrid a{
     margin-top: 1%;
-    font-size: 6vw;
+    font-size: 7vw;
     font-family: 'Source Code Pro';
   }
   
   .mobileLinks .firstGrid p{
-    margin: 2%;
-    font-size: 2vw;
-    text-align: center;
+    font-size: 3vw;
     color: grey;
     font-family: 'Source Code Pro';
+  }
+
+  .secondLane{
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 5%;
+    width: 100%;
+    color: white;
+    margin-top: 5%;
+  }
+  
+  .noice{
+    margin-bottom: 5%;
+    font-size: 4vw;
+  }
+
+  .links{
+    margin-top: 5%;
+    font-size: 4vw;
+  }
+
+  .links a{
+    color: grey
   }
 
 }
